# Virgo-2

./: .gitignore  .hf_token  3B_TRAINING_GUIDE.md  ADDITIONAL_BASELINES.md  CHANGELOG.md  COMPARISON.md  COMPLETION_SUMMARY.md  DISTILLATION_GUIDE.md  FINAL_STATUS.md  IMPLEMENTATION.md  IMPLEMENTATION_NFLM.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_TRAINING.md  If I were building a neural field LM from scratch, I’d approach it….md  LICENSE  NFLM.md  QUICKREF.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SETUP.md  STRUCTURE.md  SYSTEM_VALIDATION_RESULTS.md  THE_KEY_EXPERIMENT.md  THREE_PHASE_SUMMARY.md  TRAINED_MODEL_INFO.md  TRAINING.md  TRAINING_AND_TEST_RESULTS.md  TRAINING_SCRIPT_VALIDATION.md  V2 System Test.md  WIN_LOSE_ANALYSIS.md  install.py  install.sh  launch.sh  launch_virgo.py  pyproject.toml  run_system_test.py  setup.py  test_launch_commands.py  train_to_completion_gpu.py
archive/: README.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  CODEX_COMPLETION_NOTES.md  CONVERSATIONAL_MEMORY.md  DDIF_LANGUAGE_ADAPTATION.md  DDIF_LANGUAGE_MODEL.md  FIELD_FOLDING.md  FIELD_LIFECYCLE.md  FINAL_AUDIT_2026-05-22.md  FINAL_COMPLETION_AUDIT.md  NEURAL_FIELD_LM.md  NEURAL_FIELD_LM_READINESS.md  NOVAVEX_NEBULA_ORION_REBUILD_NOTES.md  OPERATIONS.md  PRE_TRAINING_READINESS.md  REALITY_PHASE_COMPLETION_REPORT.md  RELEASE_CHECKLIST.md  ROADMAP.md  STABLE_RELEASE_PLAN.md  STABLE_RELEASE_RESULTS.md  TRAINING_ROADMAP.md  VERIFICATION_RESULTS.md
examples/: nflm_quick_start.py  quick_train.py  tiny_corpus.txt
scripts/: chat_with_model.py  continuous_training.py  demo_nflm.py  evaluate.py  run_all_training.py  run_key_experiment.py  test_system_comprehensive.py  test_trained_model.py  train_batched.py  train_distillation.py  train_nflm.py  (+4 more)
virgo/: chat.py  (+10 more)
(+75 files in other folders)
