[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "virgo2"
version = "0.2.0"
description = "Lightweight neural-field memory engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
virgo2 = "virgo2.cli:main"

[tool.setuptools]
packages = ["virgo2"]

[tool.ruff]
line-length = 100
target-version = "py310"
