[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "virgo2"
version = "0.9.0"
description = "Neural-field memory substrate with experimental DDiF-inspired language modeling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
train = [
    "torch>=2.1; platform_system != 'Emscripten'",
]
datasets = [
    "datasets>=2.20",
]

[project.scripts]
virgo2 = "virgo2.cli:main"

[tool.setuptools.packages.find]
include = ["virgo2*"]

[tool.ruff]
line-length = 100
target-version = "py310"
